refactor(request): convert AnswerCreateRequest class to record